[project]
name = "transcription-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.10.13"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "langgraph (>=0.4.2,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
